# ICDA

./: .gitignore  Cargo.toml  README.md
canister/: Cargo.toml  README.md  canister.did  canister_ids.json  dfx.json
canister/signature/: Cargo.toml  signature.did
canister/signature/src/: confirmation.rs  lib.rs  signature.rs  types.rs
canister/src/: batch_blob.rs  blob_id.rs  lib.rs  merkle_tree.rs  signature_management.rs  time_heap.rs  upload.rs
canister/storage/: Cargo.toml  storage.did
canister/storage/src/: blob.rs  blob_chunk.rs  blob_id.rs  config.rs  da.rs  lib.rs  time_heap.rs  upload.rs
client/: Cargo.toml  LOG  README.md  test_log
client/src/: canister_interface.rs  cmc.rs  cycle.rs  ic.rs  ic_storage.rs  interface.rs  ledger.rs  lib.rs  main.rs  signature.rs  storage.rs  upload.rs
client/test/: test.rs
icda-core/: Cargo.toml  README.md
icda-core/src/: backup.rs  icda.rs  lib.rs
icda-core/src/canister_interface/: mod.rs  rr_agent.rs  signature.rs  storage.rs
script/: fund.sh
server/: Cargo.toml  README.md  build.rs
server/protos/: disperser.proto  disperser.rs
server/src/: canister_service.rs  ic_storage.rs  icda.rs  lib.rs  main.rs  signature.rs  storage.rs  upload.rs
server/src/canister_interface/: ic_storage.rs  mod.rs  signature.rs
test/: blob_key.json  config.toml  fund.sh
test/MVP Demo/: config.toml
test/init/: init.toml
test/log/v0/: blob_key.json
test/log/v3-0/: blob_key.json
test/log/v3-1/: blob_key.json
test/macos/: blob_key.json  config.toml
test/server/: blob_key.json  config.toml  statics.json
