[workspace]
resolver = "2"
members = ["canister/signature", "canister/storage", "icda-core", "server", "client"]

[workspace.package]
name = "icda"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/C-B-Elite/ICDA"
rust-version = "1.78.0"

[workspace.dependencies]
candid = "0.10"
ic-agent = "0.35.0"
hex = "0.4.3"
rs_merkle = "1.4.2"


[workspace.dependencies.sha2]
version = "0.10.8"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1"