[workspace]
resolver = "2"
members = ["canister/signature", "canister/storage", "icda-core", "server", "client"]

[workspace.package]
name = "icda"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/C-B-Elite/ICDA"
rust-version = "1.78.0"

[workspace.dependencies]
hex = "0.4.3"
rs_merkle = "1.4.2"
sha2 = "0.10.8"
anyhow = "1"
secp256k1 = "0.29.0"
futures = "0.3"
backon = "0.4.4"
rand = "0.8.5"
tracing = "0.1"
serde_json = "1"

# canister dev deps
ic-stable-structures = "0.6"
ic-cdk = "0.14"
ic-cdk-macros = "0.13"
candid = "0.10"

[workspace.dependencies.ic-agent]
path = "deps/ic-agent"
#version = "0.35.0"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.icda-core]
path = "icda-core"