[package]
name = "canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.14.0"
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.6"
hex = "0.4.3"
k256 = { version = "0.12.0", features = ["ecdsa"] }
getrandom = { version = "0.2", features = ["custom"] }
serde = { workspace = true }
serde_json = { workspace = true }
candid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }