[package]
name = "client"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
toml = "0.8"
tracing-subscriber = "0.3"
clap = { version = "4.5.7", features = ["derive"] }
num-bigint = "*"

# ic dependencies
ic-types = { git = "https://github.com/dfinity/ic.git", rev = "4fd4484" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "4fd4484" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", rev = "4fd4484" }
icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "4fd4484" }
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "4fd4484" }

# workspace deps
ic-agent = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
secp256k1 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
backon = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
rs_merkle = { workspace = true }
icda-core = { workspace = true }
