[package]
name = "core"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ic-agent = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rs_merkle = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
secp256k1 = "0.29.0"
hex = "0.4.3"
sha2 = "0.10.8"
backon = "0.4.4"
rand = "0.8.5"
tracing = "0.1"