[package]
name = "icda-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "1.3.3"

# workspace deps
ic-agent = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rs_merkle = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
secp256k1 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
backon = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
regex = "1.10.5"


[features]
default = ["client"]
client = []
server = []