[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
clap = { version = "4.4.18", default-features = false, features = ["std", "derive", "help", "usage", "string", "env"] }
governor = "0.6.0"
prost = "0.12.2"
redb = "1.0.5"
toml = "0.8.13"
sha2 = { workspace = true }
tokio = { version = "1.35.1", features = ["full", "sync"] }
tokio-stream = "0.1.15"
tonic = { version = "0.10.2", features = ["gzip", "tls", "tls-roots", "tls-roots-common", "tls-webpki-roots"] }
tonic-build = "0.10.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ic-agent = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
icda-core = { path = "../icda-core" }
futures = "0.3"
backon = "0.4.4"
rand = "0.8.5"
hex = "0.4.3"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-sdk-sts = "1.17.0"

[build-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
tonic-build = "0.10.2"

[dev-dependencies]
tempfile = "3.10.0"
