[package]
name = "signature"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-stable-structures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
hex = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }
candid = { workspace = true }
