[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.14.0"
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6"
hex = { workspace = true }
serde = { workspace = true }
candid = { workspace = true }